# react-iron-boilerplate

./: .env.sample  .gitignore  Cargo.toml  README.md  package.json  rustfmt.toml  webpack.config.js
assets/: .gitignore
src/: config.rs  main.rs
src/javascript/: index.jsx
src/middleware/: diesel.rs
src/route/: api.rs  mod.rs  web.rs
src/routes/: web.rs
templates/: index.html
