[package]
name = "microblog"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]

[dependencies]
dotenv = "0.10.0"
tera = "0.10.4"

# Iron and middlewares
iron = "0.5.1"
router = "0.5.1"
mount = "0.3.0"
staticfile = "0.4.0"
iron-tera = "0.3.0"

diesel = { version = "0.12.0", default-features = false }
diesel_codegen = { version = "0.12.0", default-features = false }
r2d2 = "0.7.2"
r2d2-diesel = "0.12.0"

[features]
default = ["sqlite"]
sqlite = ["diesel/sqlite", "diesel_codegen/sqlite"]
postgres = ["diesel/postgres", "diesel_codegen/postgres"]
mysql = ["diesel/mysql", "diesel_codegen/mysql"]
